--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "konomi-dapp",
+  "name": "konomi-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ethersproject/contracts": "^5.5.0",
-    "@ethersproject/providers": "^5.5.1",
-    "@nomiclabs/hardhat-ethers": "^2.0.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@web3-react/core": "^6.1.9",
-    "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/network-connector": "^6.1.9",
-    "dotenv": "^10.0.0",
-    "ethers": "^5.5.2",
-    "hardhat": "^2.8.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "react-toastify": "^8.1.0",
-    "web-vitals": "^2.1.2",
-    "web3": "^1.6.1"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "classnames": "^2.3.2",
+    "connectkit": "^0.0.2",
+    "ethers": "^5.7.1",
+    "material-react-toastify": "^1.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.6",
+    "react-toastify": "^9.0.8",
+    "typescript": "^4.4.2",
+    "wagmi": "^0.7.3",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"src/**/*.{ts,tsx,md}\"",
+    "eslint-fix": "eslint --fix \"src/**/*.{ts,tsx,md}\""
   },
   "eslintConfig": {
     "extends": [
@@ -48,8 +51,8 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.1",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.8"
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.1.8"
   }
 }
