--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "animate.css": "^4.1.1",
     "classnames": "^2.3.2",
     "connectkit": "^0.0.2",
     "ethers": "^5.7.1",
